<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".service">


    <TextView
        android:layout_width="145dp"
        android:layout_height="62dp"
        android:text="Deco+"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/ic_compte"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="333dp"
        android:layout_height="56dp"
        android:text="Quel service cherchez vous"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/animation"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:button="@null"
        android:drawableEnd="@drawable/checkbox"
        android:padding="5sp"
        android:text="@string/animation"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <CheckBox
        android:id="@+id/location"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:button="@null"
        android:drawableEnd="@drawable/checkbox"
        android:padding="5sp"
        android:text="@string/location"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <CheckBox
        android:id="@+id/service_traiteur"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:button="@null"
        android:drawableEnd="@drawable/checkbox"
        android:padding="5sp"
        android:text="@string/service_traiteur"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <CheckBox
        android:id="@+id/deco"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:button="@null"
        android:drawableEnd="@drawable/checkbox"
        android:padding="5sp"
        android:text="@string/d_coration"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <Button
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_margin="20dp"
        android:padding="5sp"
        android:text="@string/valider"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

</androidx.constraintlayout.widget.ConstraintLayout>